--- a/docker-compose.pulse.yml
+++ b/docker-compose.pulse.yml
@@ -6,6 +6,7 @@ services:
     userns_mode: keep-id
     volumes:
       - ~/.config/go-librespot:/config
+      - ~/.cache/go-librespot:/cache
       - ~/.config/pulse/cookie:/pulse_cookie:ro
       - /run/user/1000/pulse/native:/pulse_native # Replace 1000 with your UID
     environment:
